:bug: Bug iphone scroll : Add div overflow

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,3 +6,9 @@ body {
 .display-none{
     display: none;
 }
+
+.overflow-body-fix-for-iphone{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
